Update configuration