@@ -160,6 +160,9 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <argLine>@{argLine} --enable-preview</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
@@ -182,6 +185,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.4.0</version>
+        <configuration>
+          <release>${maven.compiler.release}</release>
+          <additionalOptions>--enable-preview</additionalOptions>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -248,6 +255,8 @@
               <mainClass>edu.usc.qed.cloudfed.Main</mainClass>
             </manifest>
           </archive>
+          <finalName>cloudfed</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
         </configuration>
       </plugin>
     </plugins>
